--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3"
+		"php": ">=5.3",
+		"phpbb/phpbb": ">=3.1.9,>3.2.*"
 	},
 	"extra": {
 		"display-name": "Minecraft Server Notification",
